fix : RoutineRepository fetch관련 문제 해결